<resources>
    <string name="app_name">recap</string>
    <string name="package_name" translatable="false">com.puntogris.recap</string>
    <string name="recap" translatable="false">Recap</string>
    <string name="header_subtitle">Open source recap platform for Android</string>

    <!-- Navigation -->

    <!-- Actions -->
    <string name="action_undo">Undo</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_send">Send</string>
    <string name="action_apply">Apply</string>
    <string name="action_close">Close</string>
    <string name="action_continue">Continue</string>
    <string name="action_login">Login</string>
    <string name="action_rate">Rate it</string>

    <!-- Login -->
    <string name="action_continue_anonymously">Continue anonymously</string>
    <string name="action_login_with_google">Login con google</string>
    <string name="login_subtitle">The biggest recap database free forever by fans for fans</string>
    <string name="login_title">Sharing starts here</string>
    <string name="login_required">This action requires login.</string>

    <!-- Rating -->
    <string name="rate_recap_title">Rate recap</string>
    <string name="rate_recap_alert">Rating must be taken seriously, please analyze the recap and judge carefully.</string>
    <string name="approve_recap_option">Approve! It follows all the rules and does not contain offensive language or content.</string>
    <string name="reject_recap_option">Reject! The recap is inaccurate, contains offensive language or content.</string>
    <string name="snack_option_required">Selecting one of the options is required.</string>
    <string name="send_rating_progress">Sending your rating to the server, do not close the app.</string>
    <string name="send_rating_success">Perfect! Your rating has been registered.</string>

    <!-- Profile -->
    <string name="pending_recap_tab">Pending</string>
    <string name="draft_tab">Drafts</string>
    <string name="change_profile_image">Change profile image</string>
    <string name="user_name_hint">Name</string>
    <string name="username_hint">Username</string>
    <string name="user_bio_hint">Bio</string>
    <string name="register_date">Registered</string>
    <string name="name_username_required">Your name and username can\'t be empty.</string>
    <string name="username_not_valid">Your username can\'t contains special characters.</string>
    <string name="username_taken">This username is already taken.</string>
    <string name="time_to_unlock_profile_edit">Remember you can only edit your profile every 10 days! Time remaining to unlock it %1$dd. %2$d h. %3$d m.</string>
    <string name="profile_time_unlock_alert">Remember you can only edit your profile every 10 days!</string>
    <string name="profile_updated_success">Profile updated successfully.</string>
    <string name="snack_edit_profile_limit">Profile edition locked.</string>

    <!-- Delete account -->
    <string name="snack_account_email_not_matching">The email doesn\'t match the one in your account.</string>
    <string name="delete_account_email_required_alert">As a safety precaution we will ask you to type the email you used in your registration or google account in your phone.</string>
    <string name="delete_account_danger_alert">Danger zone!! This will delete your account, erase all your data locally, in the cloud and log you out. This action is irreversible.</string>
    <string name="snack_account_deleted_success">Account deleted successfully.</string>
    <string name="account_email">account email</string>
    <string name="action_delete_account">Delete account</string>

    <!-- Search -->
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort by</string>
    <string name="likes">Likes</string>
    <string name="filter_by">Filter by</string>
    <string name="order_date">Date</string>
    <string name="filter_low">Low</string>
    <string name="filter_high">High</string>
    <string name="user_tab">Users</string>
    <string name="recaps_tab">Recaps</string>
    <string name="empty_state_title">Nothing to see here…</string>
    <string name="error_state_title">Uh oh…</string>

    <!-- Main feed -->
    <string name="explore_tab">Explore</string>
    <string name="rate_tab">Rate</string>

    <!-- Home Filter -->
    <string name="order_latest">Latest</string>
    <string name="order_oldest">Oldest</string>
    <string name="order_popular">Popular</string>
    <string name="order_all">All</string>

    <!-- Home Drawer -->
    <string name="add_account">Add account</string>
    <string name="view_profile">View profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="log_out">Log out</string>

    <!-- Recap -->
    <string name="recap_name">Name</string>
    <string name="recap_title">Title</string>
    <string name="recap_season">Season</string>
    <string name="recap_episode">Episode</string>
    <string name="recap_language">Language</string>
    <string name="recap_title_hint">The office</string>
    <string name="recap_season_hint">1</string>
    <string name="recap_episode_hint">14</string>
    <string name="recap_header_alert">* This information may be changed later.</string>
    <string name="recap_header_title">What do you want to publish?</string>
    <string name="rate_recap_message">Review this recap to make it accessible to the community, give it a read and rate it.</string>
    <string name="recap_username_template">by %1$s</string>

    <!-- Publish -->
    <string name="publish_recap_in_progress_title">Publishing recap..</string>
    <string name="publish_recap_in_progress_summary">Your recap is being saved in our server, do not close the app!</string>
    <string name="publish_recap_success_summary">Your recap was published successfully, share it with friends and get it approved faster!</string>

    <!-- What's new dialog-->
    <string name="updated_version">Updated to v%1$s</string>
    <string name="whats_new">What\'s new</string>

    <!-- Report -->
    <string name="inappropriate">Inappropriate</string>
    <string name="misinformation">Wrong information</string>
    <string name="snack_recap_title_required">Title can\'t be empty.</string>
    <string name="snack_recap_season_required">Season can\'t be empty.</string>
    <string name="snack_recap_episode_required">Episode can\'t be empty.</string>
    <string name="report_recap_title">Report reason</string>
    <string name="report_label">Report</string>
    <string name="report_recap_alert">Reporting is taken seriously, malicious use of this action will disable your account.</string>
    <string name="send_report_progress">Sending your report to the server, do not close the app.</string>
    <string name="send_report_success">Perfect! Your report has been registered.</string>

    <!-- About -->
    <string name="about">About</string>
    <string name="licenses">Licenses</string>
    <string name="unsplash_summary">The internet’s source of recaps</string>
    <string name="donate_summary">If you really like Recap, consider supporting its development by sending me a couple of dollars</string>
    <string name="report_bug_title">Report Bug</string>
    <string name="report_bug_summary">Report bugs or request new features</string>
    <string name="rate_app_title">Rate App</string>
    <string name="rate_app_summary">If you like Recap, rate it on the Google Play Store</string>
    <string name="github_title" translatable="false">GitHub</string>
    <string name="github_summary">Recap is open-source, check it out on GitHub</string>
    <string name="github_url" translatable="false">https://github.com/b-lam/Resplash</string>
    <string name="play_store_url" translatable="false">https://play.google.com/store/apps/details?id=com.b_lam.resplash</string>
    <string name="github_issues_url" translatable="false">https://github.com/b-lam/Resplash/issues</string>
    <string name="developer_title">Developer</string>
    <string name="developer_unsplash_username" translatable="false">\@brandon_lam</string>
    <string name="website" translatable="false">Website</string>
    <string name="developer_website_summary" translatable="false">puntogris.com</string>
    <string name="developer_website_url" translatable="false">https://www.puntogris.com</string>
    <string name="developer_unsplash_url" translatable="false">https://unsplash.com/@brandon_lam</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_url" translatable="false">https://github.com/b-lam/Resplash/blob/master/PRIVACY.md</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="terms_and_conditions_url" translatable="false">https://github.com/b-lam/Resplash/blob/master/TERMS.md</string>

    <!-- Settings -->
    <string name="notifications_enabled">Enabled</string>
    <string name="notifications_disabled">Disabled</string>
    <string name="notifications_label">Notifications</string>
    <string name="settings_label">Settings</string>
    <string name="information_label">Information</string>
    <string name="delete_account_title">Delete account</string>
    <string name="delete_account_summary">Delete your account, erasing all your data.</string>

    <!-- Urls -->
    <string name="recap_url" translatable="false">https://unsplash.com/?utm_source=resplash&amp;utm_medium=referral&amp;utm_campaign=api-credit</string>
    <string name="unsplash_authed_submit_url" translatable="false">https://unsplash.com/submit</string>
    <string name="unsplash_unauthed_submit_url" translatable="false">https://unsplash.com/?modal=%7B%22tag%22%3A%22Login%22%2C%22value%22%3A%7B%22tag%22%3A%22SubmitAPhoto%22%2C%22value%22%3A%7B%7D%7D%7D</string>
    <string name="unsplash_join_url" translatable="false">https://unsplash.com/join</string>

    <!--Theme-->
    <string name="theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">System default</string>
    <string name="default_theme_value" translatable="false">system</string>
    <string name="general">General</string>

    <!-- Draft -->
    <string name="action">Action</string>
    <string name="edit_draft_tab">Edit</string>
    <string name="delete_draft_tab">Delete</string>

    <!-- Languages -->
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="portuguese">Portuguese</string>

    <!-- Other -->
    <string name="snack_fail_login">Login canceled, connection error or a google account was not found on your cell phone.</string>
    <string name="general_error_message">An error occurred. Please try again.</string>
    <string name="general_connection_error_message">Whoops, an error occurred, check your connection and try again.</string>
    <string name="error">Error</string>
    <string name="recap_link_title">"Watch %1$s recap here!"</string>
    <string name="error_unknown">Unknown error</string>
    <string name="general_success_message">Yay! All done!</string>
    <string name="share_recap_intent_title">Share this recap!</string>

</resources>