<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference app:title="@string/app_name"
        app:summary="@string/unsplash_summary"
        app:iconSpaceReserved="false">

        <intent android:action="android.intent.action.VIEW"
            android:data="@string/recap_url" />
    </Preference>

    <PreferenceCategory app:title="@string/app_name"
        app:iconSpaceReserved="false">

        <Preference app:title="@string/github_title"
            app:iconSpaceReserved="false"
            app:summary="@string/github_summary">

            <intent android:action="android.intent.action.VIEW"
                android:data="@string/github_url" />
        </Preference>

        <Preference app:title="@string/rate_app_title"
            app:summary="@string/rate_app_summary"
            app:iconSpaceReserved="false">

            <intent android:action="android.intent.action.VIEW"
                android:data="@string/play_store_url" />
        </Preference>

        <Preference app:title="@string/report_bug_title"
            app:summary="@string/report_bug_summary"
            app:iconSpaceReserved="false">

            <intent android:action="android.intent.action.VIEW"
                android:data="@string/github_issues_url" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/developer_title"
        app:iconSpaceReserved="false">

        <Preference app:title="@string/website"
            app:iconSpaceReserved="false"
            app:summary="@string/developer_website_summary">

            <intent android:action="android.intent.action.VIEW"
                android:data="@string/developer_website_url" />
        </Preference>

    </PreferenceCategory>

    <Preference app:title="@string/privacy_policy"
        app:allowDividerAbove="true"
        app:iconSpaceReserved="false">

        <intent android:action="android.intent.action.VIEW"
            android:data="@string/privacy_policy_url" />
    </Preference>

    <Preference app:title="@string/terms_and_conditions"
        app:iconSpaceReserved="false">

        <intent android:action="android.intent.action.VIEW"
            android:data="@string/terms_and_conditions_url" />
    </Preference>
    <Preference app:key="licenses_preference"
        app:title="@string/licenses"
        app:iconSpaceReserved="false" />
</PreferenceScreen>