<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general">

        <SwitchPreference
            android:key="pref_show_notifications"
            app:summaryOn="@string/notifications_enabled"
            android:summaryOff="@string/notifications_disabled"
            android:title="@string/notifications_label" />

        <ListPreference
            app:key="pref_app_theme"
            app:title="@string/theme"
            app:entries="@array/theme_options"
            app:entryValues="@array/theme_values"
            app:defaultValue="@string/default_theme_value"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="pref_delete_account"
            app:title="@string/delete_account_title"
            app:summary="@string/delete_account_summary"/>

    </PreferenceCategory>
</PreferenceScreen>