<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="com.puntogris.recap.feature_recap.presentation.create_recap.RecapHeaderFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature_recap.presentation.create_recap.RecapHeaderFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/recap_header_title"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/recap_title"
            app:expandedHintEnabled="false"
            app:boxStrokeWidth="@dimen/keyline_0"
            app:boxStrokeWidthFocused="@dimen/keyline_0"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recapTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/divider_16"
                android:hint="@string/recap_title_hint"
                android:textAlignment="center"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/seasonField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            app:expandedHintEnabled="false"
            android:hint="@string/recap_season"
            app:boxStrokeWidth="@dimen/keyline_0"
            app:boxStrokeWidthFocused="@dimen/keyline_0"
            app:layout_constraintEnd_toStartOf="@+id/episodeField"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recapSeason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/divider_16"
                android:hint="@string/recap_season_hint"
                android:textAlignment="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/episodeField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/recap_episode"
            app:expandedHintEnabled="false"
            app:boxStrokeWidth="@dimen/keyline_0"
            app:boxStrokeWidthFocused="@dimen/keyline_0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/seasonField"
            app:layout_constraintTop_toTopOf="@+id/seasonField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recapEpisode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recap_episode_hint"
                android:background="@drawable/divider_16"
                android:textAlignment="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:onClick="@{()-> fragment.navigateToRecapBody()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_check_24" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="112dp"
            android:text="@string/recap_header_alert"
            app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>