<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="dialog"
            type="com.puntogris.recap.feature_recap.presentation.rate_recap.RateRecapDialog" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/ratingOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:foreground="?selectableItemBackground"
            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating_summary">

            <RadioButton
                android:id="@+id/approve_option"
                style="@style/TextAppearance.Recap.Body1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:paddingEnd="10dp"
                android:text="@string/approve_recap_option"
                android:textColor="@color/color_on_background_soft" />

            <RadioButton
                android:id="@+id/reject_option"
                style="@style/TextAppearance.Recap.Body1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="10dp"
                android:text="@string/reject_recap_option"
                android:textColor="@color/color_on_background_soft" />
        </RadioGroup>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingOptions"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading" />

        <Button
            android:id="@+id/negative_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:onClickListener="@{()->dialog.dismiss()}"
            android:text="@string/action_cancel"
            app:layout_constraintBottom_toBottomOf="@+id/positive_button"
            app:layout_constraintEnd_toStartOf="@+id/positive_button"
            app:layout_constraintTop_toTopOf="@+id/positive_button" />

        <Button
            android:id="@+id/positive_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClickListener="@{()->dialog.onSendRecapClicked()}"
            android:text="@string/action_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animation_view" />

        <TextView
            android:id="@+id/rating_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/rate_recap_alert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>